Renombramiento de strings
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/layout/ad_fragment_offline.xml
+++ b/app/src/main/res/layout/ad_fragment_offline.xml
@@ -8,7 +8,7 @@
         android:id="@+id/ad_app_icon"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:contentDescription="@string/icon_ad_app"
+        android:contentDescription="@string/cd_ad_app_icon"
         android:src="@drawable/quakes_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="@string/sismos_chile"
+        android:text="@string/ad_title_offline"
         app:layout_constraintEnd_toStartOf="@+id/right_guide"
         app:layout_constraintStart_toStartOf="@+id/left_guide"
         app:layout_constraintTop_toBottomOf="@+id/ad_app_icon" />
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="@string/revisa_los_ltimos_sismos_en_chile"
+        android:text="@string/ad_description_offline"
         app:layout_constraintEnd_toStartOf="@+id/right_guide"
         app:layout_constraintStart_toStartOf="@+id/left_guide"
         app:layout_constraintTop_toTopOf="@+id/horizontal_guide" />
@@ -77,7 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:text="@string/desliza_a_la_izquierda"
+        android:text="@string/swipe_to_left"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/right_guide"
         app:layout_constraintStart_toStartOf="@+id/left_guide"
