--- a/app/src/main/res/layout/ad_fragment_template.xml
+++ b/app/src/main/res/layout/ad_fragment_template.xml
@@ -19,7 +19,7 @@
             android:paddingStart="4dp"
             android:paddingEnd="4dp"
             android:text="@string/ad"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,7 +27,7 @@
             android:id="@+id/ad_app_icon"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:contentDescription="@string/icon_ad_app"
+            android:contentDescription="@string/cd_ad_app_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="false"
-            android:contentDescription="@string/puntaje_estrellas_aplicaci_n_publicidad"
+            android:contentDescription="@string/cd_stars"
             android:isIndicator="true"
             android:numStars="5"
             android:stepSize="0.5"
@@ -68,7 +68,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:contentDescription="@string/contenido_multimedia_de_publicidad"
+            android:contentDescription="@string/cd_multimedia_content"
             app:layout_constraintBottom_toTopOf="@+id/horizontal_guide"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +115,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:gravity="center"
-            android:text="@string/ver_m_s"
+            android:text="@string/see_more"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/right_guide"
             app:layout_constraintStart_toStartOf="@+id/left_guide"
