--- a/app/src/main/res/layout/card_view_quake_bottom_sheet.xml
+++ b/app/src/main/res/layout/card_view_quake_bottom_sheet.xml
@@ -17,7 +17,7 @@
         android:id="@+id/iv_mag_color"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:contentDescription="@string/painted_circle"
+        android:contentDescription="@string/cd_paint_circle"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent"
         card_view:srcCompat="@drawable/background_magnitude_circle_shape" />
@@ -81,7 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="4dp"
-        android:contentDescription="@string/sensitive_icon"
+        android:contentDescription="@string/cd_sensitive_icon"
         android:visibility="invisible"
         card_view:layout_constraintBottom_toBottomOf="@+id/tv_city"
         card_view:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +96,7 @@
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_marginStart="4dp"
-        android:contentDescription="@string/reference_icon"
+        android:contentDescription="@string/cd_reference_icon"
         card_view:layout_constraintBottom_toBottomOf="@+id/iv_date"
         card_view:layout_constraintStart_toEndOf="@+id/tv_date"
         card_view:layout_constraintTop_toTopOf="@+id/iv_date"
@@ -106,7 +106,7 @@
         android:id="@+id/iv_date"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:contentDescription="@string/hour_icon"
+        android:contentDescription="@string/cd_hour_icon"
         card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintStart_toStartOf="@+id/tv_city"
         card_view:layout_constraintTop_toBottomOf="@+id/tv_city"
