--- a/app/src/main/res/layout/card_view_quake_detail.xml
+++ b/app/src/main/res/layout/card_view_quake_detail.xml
@@ -16,7 +16,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:contentDescription="@string/painted_circle"
+            android:contentDescription="@string/cd_paint_circle"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
             card_view:srcCompat="@drawable/background_magnitude_circle_shape" />
@@ -82,7 +82,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="8dp"
-            android:contentDescription="@string/sensitive_icon"
+            android:contentDescription="@string/cd_sensitive_icon"
             android:visibility="invisible"
             card_view:layout_constraintBottom_toBottomOf="@+id/tv_city"
             card_view:layout_constraintEnd_toStartOf="@+id/tv_hour"
@@ -98,7 +98,7 @@
             android:layout_height="40dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:contentDescription="@string/datetime_icon"
+            android:contentDescription="@string/cd_datetime_icon"
             android:src="@drawable/round_date_range_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/divider" />
@@ -129,7 +129,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:text="@string/tiempo"
+            android:text="@string/date_time_title"
             android:textAppearance="?attr/textAppearanceBody2"
             app:layout_constraintEnd_toStartOf="@+id/center_guide"
             app:layout_constraintHorizontal_bias="0.0"
@@ -168,7 +168,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/distancia"
+            android:text="@string/gms_title"
             android:textAppearance="?attr/textAppearanceBody2"
             android:visibility="visible"
             app:layout_constraintEnd_toStartOf="@+id/center_guide"
@@ -208,7 +208,7 @@
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:contentDescription="@string/depth_icon"
+            android:contentDescription="@string/cd_depth_icon"
             app:layout_constraintStart_toStartOf="@+id/center_guide"
             app:layout_constraintTop_toBottomOf="@+id/divider"
             card_view:srcCompat="@drawable/round_height_24" />
@@ -219,7 +219,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/depth"
+            android:text="@string/depth_title"
             android:textAppearance="?attr/textAppearanceBody2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -247,7 +247,7 @@
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:contentDescription="@string/scale_icon"
+            android:contentDescription="@string/cd_scale_icon"
             app:layout_constraintStart_toStartOf="@+id/center_guide"
             app:layout_constraintTop_toTopOf="@+id/barrier"
             card_view:srcCompat="@drawable/round_ruler_24" />
@@ -258,7 +258,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/scale"
+            android:text="@string/scale_title"
             android:textAppearance="?attr/textAppearanceBody2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -283,7 +283,7 @@
             android:id="@+id/iv_verified"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:contentDescription="@string/verified_quake_icon"
+            android:contentDescription="@string/cd_verified_quake_icon"
             android:translationX="-5dp"
             android:translationY="5dp"
             app:layout_constraintBottom_toTopOf="@+id/iv_mag_color"
