--- a/app/src/main/res/layout/changelog_dialog.xml
+++ b/app/src/main/res/layout/changelog_dialog.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/qu_hay_de_nuevo_en_la_app"
+        android:text="@string/change_log_title"
         android:textAppearance="?attr/textAppearanceHeadline6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -69,11 +69,10 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_change_log"
-        style="@style/Widget.App.Button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/entendido"
+        android:text="@string/ok"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/divider"
         app:layout_constraintStart_toStartOf="@+id/tv_problems"
@@ -85,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:contentDescription="@string/new_version_icon"
+        android:contentDescription="@string/cd_new_version_icon"
         app:layout_constraintBottom_toBottomOf="@+id/tv_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
