--- a/app/src/main/res/layout/error_message.xml
+++ b/app/src/main/res/layout/error_message.xml
@@ -9,7 +9,7 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:layout_marginTop="8dp"
-        android:contentDescription="@string/no_apagado"
+        android:contentDescription="@string/cd_wifi_off"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/reintentar"
+        android:text="@string/retry"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tv_msg_no_wifi"
         app:layout_constraintStart_toStartOf="@+id/tv_msg_no_wifi"
