--- a/app/src/main/res/layout/card_view_notification_permission.xml
+++ b/app/src/main/res/layout/card_view_notification_permission.xml
@@ -46,7 +46,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/activar"
+            android:text="@string/activate_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
