--- a/app/src/main/res/layout/card_view_quake.xml
+++ b/app/src/main/res/layout/card_view_quake.xml
@@ -16,7 +16,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:contentDescription="@string/painted_circle"
+        android:contentDescription="@string/cd_paint_circle"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent"
         card_view:srcCompat="@drawable/background_magnitude_circle_shape" />
@@ -68,7 +68,7 @@
         android:gravity="center"
         android:maxLength="4"
         android:textAppearance="?attr/textAppearanceHeadline5"
-        android:textColor="@android:color/white"
+        android:textColor="@color/white"
         android:textStyle="normal"
         card_view:layout_constraintBottom_toBottomOf="@+id/iv_mag_color"
         card_view:layout_constraintEnd_toEndOf="@+id/iv_mag_color"
@@ -82,7 +82,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="8dp"
-        android:contentDescription="@string/sensitive_icon"
+        android:contentDescription="@string/cd_sensitive_icon"
         android:visibility="invisible"
         card_view:layout_constraintBottom_toBottomOf="@+id/tv_city"
         card_view:layout_constraintEnd_toStartOf="@+id/tv_hour"
@@ -108,7 +108,7 @@
         android:id="@+id/iv_verified"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:contentDescription="@string/verified_quake_icon"
+        android:contentDescription="@string/cd_verified_quake_icon"
         android:translationX="-5dp"
         android:translationY="5dp"
         card_view:layout_constraintBottom_toTopOf="@+id/iv_mag_color"
