--- a/app/src/main/res/layout/toolbar_no_main.xml
+++ b/app/src/main/res/layout/toolbar_no_main.xml
@@ -12,7 +12,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/materialToolbar"
+            android:id="@+id/material_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:layout_constraintEnd_toEndOf="parent"
