--- a/app/src/main/res/layout/changelog_dialog.xml
+++ b/app/src/main/res/layout/changelog_dialog.xml
@@ -25,7 +25,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tv_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_title"
-        tools:text="Versión: XX.XX.X" />
+        tools:text="@string/tools_changelog_version" />
 
     <View
         android:id="@+id/divider"
@@ -65,7 +65,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/tv_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_problems"
-        tools:text="- Ahora modo noche automático se activa con ahorro de energía \n- Se agregan reportes sismológicos mensuales \n- Actualizaciones internas" />
+        tools:text="@string/tools_changelog_items" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_change_log"
