Paginación implementada para reportes #35 y resuelto bug #36 para reportes
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/layout/error_message.xml
+++ b/app/src/main/res/layout/error_message.xml
@@ -16,7 +16,7 @@
         app:srcCompat="@drawable/round_wifi_off_24" />
 
     <TextView
-        android:id="@+id/tv_msg_no_wifi"
+        android:id="@+id/tv_msg_api_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/wifi_off_msg"
@@ -33,8 +33,8 @@
         android:layout_marginBottom="8dp"
         android:text="@string/retry"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/tv_msg_no_wifi"
-        app:layout_constraintStart_toStartOf="@+id/tv_msg_no_wifi"
-        app:layout_constraintTop_toBottomOf="@+id/tv_msg_no_wifi" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_msg_api_error"
+        app:layout_constraintStart_toStartOf="@+id/tv_msg_api_error"
+        app:layout_constraintTop_toBottomOf="@+id/tv_msg_api_error" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
